# cpp_capstone_project

./: .clang-format  .gitignore  CMakeLists.txt  README.md
cmake/: CompilerWarnings.cmake  Conan.cmake  FindSdl2.cmake  StandardProjectSettings.cmake
include/: actor.h  ball.hpp  board.hpp  buffer.h  cameraComponent.h  component.h  entity.hpp  game.h  game.hpp  orthoCameraController.h  orthographicCamera.h  paddle.hpp  renderer.h  renderer2D.h  resourceManager.h  robot.h  shader.h  spriteComponent.h  texture.h  util.h  utility.hpp  vertexArray.h
src/: CMakeLists.txt  actor.cpp  ball.cpp  board.cpp  buffer.cpp  cameraComponent.cpp  component.cpp  entity.cpp  game.cpp  main.cpp  orthoCameraController.cpp  orthorgraphicCamera.cpp  paddle.cpp  renderer.cpp  renderer2D.cpp  resourceManager.cpp  robot.cpp  shader.cpp  spriteComponent.cpp  texture.cpp  util.cpp  utility.cpp  vertexArray.cpp
src/imgui/: imgui_impl_opengl.cpp  imgui_impl_opengl.h  imgui_impl_sdl.cpp  imgui_impl_sdl.h
src/shaders/: Texture.glsl  b_texture.glsl  basic2.glsl  s_shader.frag  s_shader.vert
